# sleigh

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
src/: setup-ghidra-source.cmake
