load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

cmake(
    name = "sleigh",
    generate_args = ["-GNinja"],
    lib_source = "//:all_srcs",
    out_static_libs = ["libdecomp.a"],
    tags = ["requires-network"],  # ONLY fetches source code from a hash
    deps = [
        "@zlib",
    ],
    out_include_dir = "include/sleigh"
)

filegroup(
    name = "all_srcs",
    srcs = glob(
        ["**"],
        exclude = ["bazel-*/**"],
    ),
)
